--- a/templates/about.html
+++ b/templates/about.html
@@ -48,7 +48,7 @@
             <div class="about">
                 <ul>
                     <li class='list_item'> This book recommendation project is a mini project implemented using the Book Crossing Data available <a href='http://www2.informatik.uni-freiburg.de/~cziegler/BX/'> here</a>. </li>
-                    <li class='list_item'> On viewing a apecific book, details of that book and list of recommended books is shown to the user.</li>
+                    <li class='list_item'> On viewing a specific book, details of that book and list of recommended books is shown to the user.</li>
                     <li class='list_item'> Hybrid recommendation algorithms are used in this project which include Collaborative Filtering using Pearson Correlation as well as KNN algorithm and Content Based recommendation algorithm.  </li>
                     <li class='list_item'> Since this is a mini project for demonstration, user login data as well as user view history data is not maintained. </li>
                     <li class='list_item'> The recommendation of each book viewed is based only on the ratings of users and other features of that book in the dataset. Current user view actions are not saved and hence not considered for recommendation. </li>
