--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,18 @@
     <body>
 
         <!-- Heading Section -->
-        <div class='head_section'>
+        <header>
+            <div class='head_section'>
+                <h1> Book Recommendation System </h1>
+                <nav>
+                    <a href="#">Home</a>
+                    <a href="/all_books">All Books</a>
+                    <a href="/about">About</a>
+                    <div class="animation start-home"></div>
+                </nav>
+            </div>
+        </header>
+        <!-- <div class='head_section'>
             <h1> Book Recommendation System </h1>
             <nav>
                 <a href="#">Home</a>
@@ -40,7 +51,7 @@
                 <a href="/about">About</a>
                 <div class="animation start-home"></div>
             </nav>
-        </div>
+        </div> -->
 
 
         <!-- Popular  Books Section -->
