--- a/templates/all_books.html
+++ b/templates/all_books.html
@@ -1,6 +1,11 @@
 <html>
 
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
         <link href="../static/css/main_page.css" rel="stylesheet" type="text/css"/>
         <link rel = "icon" href =  "../static/images/favicon.ico" type = "image/x-icon">
 
