--- a/templates/book.html
+++ b/templates/book.html
@@ -3,6 +3,11 @@
     <head>
         <title> Book Recommendation Website </title>
 
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
         <link href="../static/css/book.css" rel="stylesheet" type="text/css"/>
         <link rel = "icon" href =  "../static/images/favicon.ico" type = "image/x-icon">
 
