--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
     <body>
 
         <!-- Heading Section -->
-        <header>
+        <!-- <header>
             <div class='head_section'>
                 <h1> Book Recommendation System </h1>
                 <nav>
@@ -47,8 +47,8 @@
                     <div class="animation start-home"></div>
                 </nav>
             </div>
-        </header>
-        <!-- <div class='head_section'>
+        </header> -->
+        <div class='head_section'>
             <h1> Book Recommendation System </h1>
             <nav>
                 <a href="#">Home</a>
@@ -56,7 +56,7 @@
                 <a href="/about">About</a>
                 <div class="animation start-home"></div>
             </nav>
-        </div> -->
+        </div>
 
 
         <!-- Popular  Books Section -->
