--- a/static/css/book.css
+++ b/static/css/book.css
@@ -106,11 +106,11 @@ h2 {
 
 @media screen and (max-width: 480px) {
 	.recommended_books {
-		width: 85%;
+		max-width: 480px;
     }
     
     .book_details {
-		width: 85%;
+		max-width: 480px;
 	}
 
 	.grid_container {
