--- a/static/css/main_page.css
+++ b/static/css/main_page.css
@@ -190,6 +190,11 @@ ul li::before {
 	}
 
 	.grid_container {
-		grid-template-columns: auto;
+		display: none;
+		/* grid-template-columns: auto; */
+	}
+
+	.grid_item {
+		width: 250px;
 	}
 }
