--- a/static/css/book.css
+++ b/static/css/book.css
@@ -118,10 +118,12 @@ h2 {
     }
     
     .arrange_horizontal {
+        width: 480px;
         display: block;
     }
 
 	.grid_container {
+        width: 480px;
         display: block;
 		/* grid-template-columns: auto; */
     }
