--- a/static/css/book.css
+++ b/static/css/book.css
@@ -123,9 +123,9 @@ h2 {
     }
 
 	.grid_container {
-        width: 480px;
-        display: block;
-		/* grid-template-columns: auto; */
+        /* width: 480px;
+        display: block; */
+		grid-template-columns: auto;
     }
     
     .grid_item {
