--- a/static/css/book.css
+++ b/static/css/book.css
@@ -122,6 +122,10 @@ h2 {
         display: block;
     }
 
+    .book_text_details {
+        position: static;
+    }
+
 	.grid_container {
 		grid-template-columns: auto;
     }
