--- a/static/css/book.css
+++ b/static/css/book.css
@@ -1,3 +1,5 @@
+/* CSS file for book.html */
+
 .head_section {
     width: 100%;
     padding: 5px 0;
@@ -17,6 +19,8 @@ h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/* Book Details Section */
 .book_details {
     margin-top: 20px;
     margin-left: 20px;
@@ -50,6 +54,7 @@ h2 {
 }
 
 
+/* Recommended Books Section*/
 .recommended_books {
     margin-top: 50px;
     margin-left: 20px;
@@ -64,6 +69,7 @@ h2 {
     margin-bottom: 50px;
 }
 
+/* Grid container and its items */
 .grid_container {
     margin-top: 10px;
     margin-left: 20px;
@@ -104,6 +110,7 @@ h2 {
 
 
 
+/* Media Query */
 @media screen and (max-width: 480px) {
     .head_section {
         max-width: 480px;
@@ -117,7 +124,7 @@ h2 {
 		max-width: 480px;
     }
     
-    .arrange_horizontal > *{
+    .arrange_horizontal > * {
         width: 480px;
         display: block;
     }
