--- a/static/css/main_page.css
+++ b/static/css/main_page.css
@@ -1,3 +1,5 @@
+/* Common CSS file for home.html, all_books.html and about.html */
+
 .head_section {
     width: 100%;
 	background-color: black;
@@ -6,12 +8,13 @@
 	font-size: 0;
 }
 
+/* Nav Bar and its animation */
+
 nav {
 	margin: 27px auto 0;
 	position: relative;
 	width: 320px;
 	height: 50px;
-	/* background-color: #34495e; */
 }
 
 
@@ -76,6 +79,7 @@ nav .start-contact, a:nth-child(5):hover~.animation {
 	left: 470px;
 	background-color: #e67e22;
 }
+/* Nav Bar section ends */
 
 
 h1 {
@@ -95,6 +99,7 @@ h2 {
     padding: 10px;
 }
 
+/* Popular Books Section (home.html) */
 .popular_books {
     margin-left: 10px;
 	margin-right: 10px;
@@ -103,6 +108,7 @@ h2 {
     border-color: #e74c3c;
 }
 
+/* All Books Section (all_books.html) */
 .all_books {
     margin-left: 10px;
 	margin-right: 10px;
@@ -111,6 +117,7 @@ h2 {
     border-color: #9b59b6;
 }
 
+/* Grid container and its items. Common for Popular books and All books section */
 .grid_container {
     margin-top: 10px;
     margin-left: 20px;
@@ -151,6 +158,7 @@ h2 {
 }
 
 
+/* About Section (about.html) */
 .about {
 	margin-left: 10px;
 	margin-right: 10px;
@@ -160,6 +168,7 @@ h2 {
     border-color: #e67e22;
 }
 
+/* Unordered list and its bullet design in About section */
 .list_item {
 	margin: 10px;
 }
@@ -178,6 +187,7 @@ ul li::before {
 }
 
 
+/* Media Query */
 
 @media screen and (max-width: 480px) {
 
