changes in readme

--- a/templates/about.html
+++ b/templates/about.html
@@ -57,7 +57,7 @@
                     <li class='list_item'> Hybrid recommendation algorithms are used in this project which include Collaborative Filtering using Pearson Correlation as well as KNN algorithm and Content Based recommendation algorithm.  </li>
                     <li class='list_item'> Since this is a mini project for demonstration, user login data as well as user view history data is not maintained. </li>
                     <li class='list_item'> The recommendation of each book viewed is based only on the ratings of users and other features of that book in the dataset. Current user view actions are not saved and hence not considered for recommendation. </li>
-                    <li class='list_item'> The project can be further extended by creating a register/login system and a rating system where the logged in users can give rating to each book. The recommendations can then be evaluated based user history and new ratings. </li>
+                    <li class='list_item'> The project can be further extended by creating a register/login system and a rating system where the logged in users can give rating to each book. The recommendations can then be evaluated based on user view history and new ratings. </li>
                     <li class='list_item'> The source code of the project is available in my GitHub repository <a href='https://github.com/AnkitaKar1998/Book_Recommendation_System'> here</a>.</li>
                 </ul>
             </div>
